--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,6 +23,33 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <FrameLayout
+            android:id="@+id/photoContainer"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/registerTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.sneyder.biznearby.utils.CircleImageView
+                android:id="@+id/photoImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:src="@drawable/person_placeholder"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/cameraButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_camera_24"
+                app:fabSize="mini"
+                app:elevation="0dp"
+                android:layout_gravity="bottom|right"/>
+        </FrameLayout>
+
         <TextView
             android:id="@+id/fullnameTextView"
             style="@style/CustomForm.Label"
@@ -30,7 +57,7 @@
             android:layout_height="wrap_content"
             android:text="Nombre completo:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/registerTextView" />
+            app:layout_constraintTop_toBottomOf="@id/photoContainer" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fullnameEditText"
@@ -54,6 +81,7 @@
             android:id="@+id/emailEditText"
             style="@style/CustomForm.Input"
             android:layout_width="match_parent"
+            android:inputType="textEmailAddress"
             android:hint="Escribe tu correo electronico"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -199,6 +227,7 @@
 <!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginTop="16dp"
@@ -209,6 +238,67 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />
+
+
+        <View
+            android:id="@+id/line1"
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:background="#000"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signUpButton"
+            app:layout_constraintEnd_toStartOf="@id/orTextView"/>
+
+        <TextView
+            android:id="@+id/orTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toTopOf="@id/line1"
+            app:layout_constraintBottom_toBottomOf="@id/line1"
+            app:layout_constraintStart_toEndOf="@id/line1"
+            app:layout_constraintEnd_toStartOf="@id/line2"
+            android:text="o" />
+
+        <View
+            android:id="@+id/line2"
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:background="#000"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toEndOf="@id/orTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signUpButton" />
+
+<!--        <com.facebook.login.widget.LoginButton-->
+<!--            android:id="@+id/signUpFacebookButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/signUpButton"/>-->
+
+        <Button
+            android:id="@+id/signUpFacebookButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FB"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/signUpGoogleButton"
+            app:layout_constraintTop_toBottomOf="@id/line1"/>
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signUpGoogleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="@id/signUpFacebookButton"
+            app:layout_constraintBottom_toBottomOf="@id/signUpFacebookButton"
+            app:layout_constraintStart_toEndOf="@id/signUpFacebookButton"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
